--- a/styles.css
+++ b/styles.css
@@ -255,3 +255,21 @@ button:hover {
     font-size: 12px;
     z-index: 1000;
 }
+
+#respuesta{
+    display: none;
+    background-color: green;
+    padding: .5rem;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+}
+
+#respuestaNegativa{
+    display: none;
+    background-color: red;
+    padding: .5rem;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+}
