--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ button:hover {
     z-index: 1000;
 }
 
-#respuesta{
+#respuesta2{
     display: none;
     background-color: green;
     padding: .5rem;
