--- a/styles.css
+++ b/styles.css
@@ -260,16 +260,18 @@ button:hover {
     display: none;
     background-color: green;
     padding: .5rem;
-    border-radius: 10px;
+    border-radius: 12px;
     color: white;
     font-weight: 600;
+    margin-top: 0;
 }
 
 #respuestaNegativa{
     display: none;
     background-color: red;
     padding: .5rem;
-    border-radius: 10px;
+    border-radius: 12px;
     color: white;
     font-weight: 600;
+    margin-top: 0;
 }
