--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,17 @@ button:hover {
     display: none;
 }
 
+#codigoPostalRemitente{
+    display: block;
+}
+
+.origenEnvio{
+    background-color: #95a7ff;
+    padding: .5rem;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
 .contenedorRespuesta{
     margin-top: 1rem;
     background-color: #e1f4e5;
