--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,152 @@ form {
     margin-bottom: .5rem;
 }
 
-.doble{
+.CpyLocalidad{
+    padding: .5rem;
+    border: dashed 2px cornflowerblue;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    justify-items: center;
+    margin-bottom: .3rem;
+}
+
+.cp{
+    width: 49%;
+}
+
+.localidad{
+    width: 49%;
+}
+
+#localidad{
+    font-size: small;
+    color: red;
+    border: 1px solid red;
+    font-weight: 800;
+    height: 38px
+}
+
+#codigoPostalDestinatario{
+    height: 38px
+}
+
+/* Estilos Camiones */
+.trucks {
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.truck {
+    text-align: center;
+}
+.truck img {
+    width: 100%; 
+    height: auto;
+    border: 2px dashed #ccc; 
+    border-radius: 8px;
+}
+.label {
+    margin-top: 5px;
+    padding: 5px; 
+    background-color: #f0f0f0; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.truck img.envio-verde {
+    background-color: #32d554;
+    border: 2px dashed green;
+    box-shadow: 0 0px 5px #515151a5; 
+}
+
+
+.truck img.desactivado {
+    filter: grayscale(100%) brightness(70%);
+}
+
+@keyframes titilar {
+    0% { background-color: rgb(129, 0, 0); }
+    50% { background-color: orangered; } 
+    100% { background-color: rgb(129, 0, 0); } 
+}
+
+.truck .label.titilando {
+    color: white;
+    animation: titilar 1s infinite;
+    border: none;
+    box-shadow: 0 0px 5px #515151a5; 
+}
+
+/* Fin Estilos Camiones */
+
+.Andre {
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
+    color: red; 
+    text-transform: uppercase;
+}
+
+.lista-localidades {
+    width: 48%;
+    border: 1px solid grey;
+    font-size: small;
+    max-height: 150px;
+    overflow-y: auto;
+    display: none;
+    position: absolute;
+    background-color: white;
+    z-index: 1000;
+}
+.lista-localidades div {
+    padding: 5px;
+    cursor: pointer;
+}
+.lista-localidades div:hover {
+    background-color: red;
+    color: white;
+}
+
+.spinner2 {
+    display: none;
+    border: 4px solid rgba(252, 180, 180, 0.51);
+    border-top: 4px solid red;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    right: 16px;
+    top: 48%;
+    transform: translateY(-50%);
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.clear-button {
+    background-color: #ffffff;
+    padding: .2rem;
+    border-radius: 50px;
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    right: 16px; /* Posición de la "X" dentro del input */
+    top: 58%;
+    transform: translateY(-50%);
+    color: cornflowerblue;
+    font-size: 18px;
+}
+input {
+    padding-right: 30px; /* Espacio para la "X" */
+}
+
+.doble{
+    display: flex;
     gap: .5rem;
     color: white;
     padding: .3rem;
@@ -279,7 +422,7 @@ button:hover {
 
 #respuesta2{
     display: none;
-    background-color: #32d554;
+    background-color: cornflowerblue;
     padding: .5rem;
     border-radius: 12px;
     color: white;
