--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,16 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Modica Oft';
+    src: url('./fonts/modica.otf'),
+}
+
+*::selection {
+    color: #fce96b;
+    background-color: #0065C3;
+  }
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -57,8 +67,9 @@ form {
 }
 
 #localidad{
-    font-size: small;
-    color: red;
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 300;
+    font-style: normal;
     border: 1px solid red;
     font-weight: 800;
     height: 38px
@@ -91,7 +102,10 @@ form {
     border-radius: 4px; 
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-weight: bold;
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.2rem;
 }
 
 .truck img.envio-verde {
@@ -120,13 +134,6 @@ form {
 
 /* Fin Estilos Camiones */
 
-.Andre {
-    font-family: 'Arial', sans-serif;
-    font-weight: bold;
-    color: red; 
-    text-transform: uppercase;
-}
-
 .lista-localidades {
     width: 47.5%;
     border: 1px solid grey;
@@ -150,15 +157,15 @@ form {
 
 .spinner2 {
     display: none;
-    border: 4px solid rgba(252, 180, 180, 0.51);
-    border-top: 4px solid red;
+    border: 4px solid rgba(247, 171, 171, 0.881);
+    border-top: 4px solid #440000;
     border-radius: 50%;
     width: 20px;
     height: 20px;
     animation: spin 1s linear infinite;
     position: absolute;
     right: 16px;
-    top: 58%;
+    top: 30%;
     transform: translateY(-50%);
 }
 @keyframes spin {
@@ -167,16 +174,16 @@ form {
 }
 
 .clear-button {
-    background-color: #ffffff;
+    background-color: white;
     padding: .2rem;
     border-radius: 10px;
     display: none;
     cursor: pointer;
     position: absolute;
     right: 16px; /* Posición de la "X" dentro del input */
-    top: 70%;
+    top: 50%;
     transform: translateY(-50%);
-    color: cornflowerblue;
+    color: #440000;
     font-size: 18px;
 }
 input {
@@ -184,6 +191,7 @@ input {
 }
 
 .doble{
+    text-align: justify;
     display: flex;
     gap: .5rem;
     color: white;
@@ -450,16 +458,6 @@ button:hover {
     background-color: rgb(43, 43, 43);
 }
 
-#volumenVisual{
-    background-color: #32d554;
-    color: white;
-    width: max-content;
-    border-radius: 10px;
-    padding: 1rem;
-    margin: .5rem;
-    margin-left: 0;
-}
-
 #bultos{
     background-color: #bebebe;
 }
@@ -479,6 +477,9 @@ button:hover {
 }
 
 .bultoTitle{
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 500;
+    font-style: normal;
     background-color: red;
     color: white;
     width: max-content;
@@ -539,8 +540,10 @@ button:hover {
 }
 
 .brand-name {
-    font-size: 20px;
-    color: #004080;
+    text-transform: uppercase;
+    font-family: 'Modica Oft';
+    font-size: 2rem;
+    color: grey;
     font-weight: bold;
 }
 
@@ -649,5 +652,45 @@ button:hover {
     display: none;
 }
 
+/* VOLUMENES */
+.volumen-container {
+    border: 2px dashed #28a745;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    background-color: #e9f7ef;
+    transition: transform 0.2s;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+.volumen-container:hover {
+    transform: scale(1.08);
+    cursor: pointer;
+}
+.volumen-container > img {
+    width: 60px;
+}
+.volumen-label {
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
 
+#volumenTotalcm, #volumenTotal{
+    color: #004701;
+    font-size: 1.7rem;
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
 
+.cubic{
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+}
+
+/* FIN VOLUMENES */
