--- a/styles.css
+++ b/styles.css
@@ -825,4 +825,10 @@ footer > a:hover{
     margin: 0!important;
 }
 
+@media (max-width: 490px) {
+    .btn-warning {
+        margin-bottom: 10px !important;
+    }
+}
+
 /* FIN BOTON DESCARGA */
