--- a/styles.css
+++ b/styles.css
@@ -271,12 +271,17 @@ button:hover {
 }
 
 .spinner-container {
-    display: none;
+    display: none; /* Cambiar a 'flex' cuando se muestre el spinner */
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff50; /* Fondo semi-transparente */
+    backdrop-filter: blur(5px); /* Efecto de desenfoque */
     z-index: 9999;
+    justify-content: center; /* Centrar el contenido horizontalmente */
+    align-items: center; /* Centrar el contenido verticalmente */
 }
 
 .spinner {
@@ -292,6 +297,13 @@ button:hover {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 #calleRemitente, #calleNroRemitente, #codigoPostalRemitente, #m3, #esRemitoConformado, #esFletePagoDestino{
     display: none;
