--- a/styles.css
+++ b/styles.css
@@ -722,7 +722,7 @@ button:hover {
 }
 
 .provincia{
-    display: none;
+    display: block;
 }
 
 /* FIN VOLUMENES */
@@ -844,3 +844,89 @@ footer > a:hover{
 }
 
 /* FIN BOTON DESCARGA */
+
+/* COTIZADOR */
+
+.grid-container {
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    padding: 20px;
+    background-color: #f7f9fc; /* Fondo más claro */
+}
+
+.cotizacion-container {
+    border: 2px dashed green;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
+    background: #ffffff; /* Fondo blanco */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    transition: transform 0.3s, box-shadow 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative; /* Para la animación */
+    overflow: hidden; /* Para ocultar el efecto de animación */
+}
+
+.valor-cotizacion {
+    color: green; /* Color original */
+    font-size: 1.5rem; /* Tamaño más pequeño para el valor */
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 700;
+    transition: font-size 0.3s ease; /* Suaviza el cambio de tamaño de fuente */
+}
+
+.cotizacion-container:hover .valor-cotizacion {
+    color: yellow; /* Cambia a dorado al hacer hover en el contenedor */
+    font-size: 2rem; /* Tamaño más grande para el valor */
+}
+
+.cotizacion-container:hover {
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Sombra más intensa al pasar el ratón */
+    cursor: pointer;
+    background: linear-gradient(135deg, #4caf50, #81c784); /* Degradado de verdes */
+}
+
+.cotizacion-label {
+    font-weight: 600;
+    font-size: 1.2rem; /* Tamaño de fuente más pequeño */
+    margin-top: 5px;
+    color: #333; /* Color oscuro */
+}
+
+.signo-peso {
+    position: relative; /* Para centrar la imagen */
+    animation: float 3s ease-in-out infinite; /* Animación de flotación */
+}
+
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-5px);
+    }
+}
+
+span > img {
+    width: 50px; /* Tamaño de la imagen */
+}
+
+.titulo-cotizacion {
+    grid-column: span 2; 
+    background-color: #28a745; 
+    color: white; 
+    border-radius: 5px; 
+    width: fit-content; 
+    padding: 0.5rem; 
+    margin: 0 auto; 
+    text-align: center; 
+    font-size: 1rem; 
+    font-weight: bold; 
+}
+
+/* FIN COTIZADOR */
