--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   }
 
 body {
+    min-height: 100vh;
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
@@ -410,6 +411,8 @@ button:hover {
 }
 
 .reDescarga{
+    text-align: center;
+    align-items: center;
     font-family: "Signika Negative", sans-serif;
     font-size: small;
     border-radius: 20px;
@@ -421,7 +424,6 @@ button:hover {
     margin-top: 0;
     text-align: center;
     justify-content: baseline;
-    text-align: center;
 }
 
 .reDescarga img {
@@ -591,6 +593,14 @@ button:hover {
     margin: 0 15px;
 }
 
+a.nav-link{
+    color: #004080 !important;
+}
+
+a.nav-link.active{
+    color: white !important;
+}
+
 .nav-item a {
     color: #004080;
     text-decoration: none;
@@ -603,28 +613,28 @@ button:hover {
 
 .nav-item a:hover {
     background-color: #e6f0ff;
-    color: #003366;
+    color: #1a75ff;
 }
 
 .nav-item .active {
+    font-weight: 800;
     background-color: #1a75ff;
     color: #ffffff;
 }
 
-/* Menu Hamburguesa */
-.menu-toggle {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
+a.nav-link.active, a.nav-link {
+    border-radius: 10px !important;
+    transition: .5s;
 }
 
-.menu-toggle .bar {
-    height: 3px;
-    width: 25px;
-    background-color: #004080;
-    margin: 4px 0;
-    transition: 0.3s;
+a.nav-link:hover{
+    background-color: cornflowerblue !important;
+    transform: scale(1.05);
+    color: white !important;
+
 }
+
+/* Menu Hamburguesa */
 
 @media (max-width: 940px) {
     .nav-links {
@@ -650,6 +660,10 @@ button:hover {
         margin: 0;
         width: 100%;
         text-align: center;
+    }
+
+    button.navbar-toggler:hover{
+        background-color: cornflowerblue;
     }
 
     .menu-toggle {
@@ -932,3 +946,159 @@ span > img {
 }
 
 /* FIN COTIZADOR */
+
+/* CARDS BUSCADOR */
+
+.card {
+    transition: transform 0.2s;
+    cursor: pointer;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card-title {
+    font-family: "Chakra Petch", sans-serif;
+    color: rgb(55, 119, 238);
+    font-weight: 900;
+    font-size: 1rem;
+}
+
+p.card-text{
+    margin-bottom: 10px;
+}
+
+p.card-text:nth-child(2){
+    width: fit-content;
+    font-size: small;
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+}
+p.card-text:nth-child(3){
+    font-size: small;
+    font-weight: 400;
+}
+
+p.card-text:nth-child(6){
+    color: cornflowerblue;
+    font-weight: 900;
+}
+
+p.card-text:nth-child(7){
+    color: #004701;
+}
+
+div.card-body > p > i{
+    font-size: 1rem;
+}
+
+.spinner-border {
+    display: none; /* Ocultar spinner por defecto */
+    margin: auto;
+}
+
+#spinner {
+    color: cornflowerblue;
+    display: flex; /* Mostrar el spinner al cargar */
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .card {
+        margin: 10px;
+    }
+}
+
+#cards-container {
+    min-height: 100vh;
+    background-color: white; /* Fondo negro */
+    padding: 20px; /* Espacio interno */
+    border-radius: 0 0 8px 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra */
+    margin-bottom: 30px;
+}
+
+/* Estilo de las tarjetas */
+#envios-cards .card {
+    background-color: #f5f5f7; /* Fondo de la tarjeta */
+    color: rgb(65, 65, 65); 
+    margin-bottom: 20px; 
+    border: none; 
+    border-radius: 8px; 
+    box-shadow: 0 0px 10px #00000067; 
+    border: solid 1px rgba(128, 128, 128, 0.475);
+}
+
+.mt-5{
+    margin-top: 0 !important;
+}
+
+/* Media query para pantallas medianas (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+    #envios-cards .col-md-4 {
+        flex: 0 0 50%; /* 2 tarjetas por fila */
+        max-width: 50%; /* 2 tarjetas por fila */
+    }
+}
+
+/* Media query para pantallas pequeñas (móviles) */
+@media (max-width: 767px) {
+    #envios-cards .col-md-4 {
+        flex: 0 0 100%; /* 1 tarjeta por fila */
+        max-width: 100%; /* 1 tarjeta por fila */
+    }
+}
+
+/* BUSCADOR */
+.search-filter-container {
+    background-color: rgb(220, 220, 220);
+    padding: 15px;
+    padding-bottom: 0;
+    border-radius: 8px 8px 0 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* ORDENAR MAS ANTIGUO Y NUEVO */
+.input-group {
+    border: solid 1px rgba(128, 128, 128, 0.475);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input-group .form-control {
+    border: none;
+    box-shadow: none;
+}
+
+.input-group .input-group-append .btn {
+    background-color: cornflowerblue;
+    border: solid 1px rgba(128, 128, 128, 0.475);
+    color: white;
+    border: none;
+    transition: .5s;
+}
+
+.input-group .input-group-append .btn:hover {
+    background-color: rgb(66, 130, 249);
+}
+
+.custom-select {
+    margin-bottom: 0;
+    border-radius: 8px;
+    padding: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.custom-select:focus {
+    border-color: cornflowerblue;
+    box-shadow: none;
+}
+
+/* FIN ORDENAR MAS ANTIGUO Y NUEVO */
+
+
