--- a/styles.css
+++ b/styles.css
@@ -1130,6 +1130,8 @@ div.card-body > p > i{
 }
 
 .apiSeguimiento{
+    height: fit-content;
+    margin-bottom: 5px;
     border: dashed cornflowerblue 2px;
     border-radius: 10px;
     padding: 5px;
@@ -1143,6 +1145,10 @@ div.card-body > p > i{
     font-size: 1rem;
     font-family: "Oswald", sans-serif;
     font-weight: 400;
+}
+
+.apiSeguimiento p:nth-child(3) {
+    margin-bottom: -15px;
 }
 
 /* FIN ORDENAR MAS ANTIGUO Y NUEVO */
