--- a/styles.css
+++ b/styles.css
@@ -683,6 +683,11 @@ a.nav-link:hover{
     }
 }
 
+#meli-logo{
+    width: 30px;
+    margin-right: 5px;
+}
+
 /* FIN NAVBAR */
 
 #deptoDestinatario , #pisolDestinatario, #codigoPostalDestinatario, #emailDestinatario, #localidad{
@@ -993,6 +998,11 @@ p.card-text:nth-child(5){
     font-weight: 300;
 }
 
+p.card-text:nth-child(6){
+    font-family: "Oswald", sans-serif;
+    font-weight: 300;
+}
+
 .remitoCard{
     text-align: center;
     padding: .2rem;
@@ -1003,6 +1013,19 @@ p.card-text:nth-child(5){
     font-size: 1.3rem;
     font-family: "Oswald", sans-serif;
     font-weight: 600;
+}
+
+.remitoCardMeli{
+    text-align: center;
+    padding: .2rem;
+    width: fit-content;
+    border-radius: 10px;
+    border: dashed #ffc107 2px;
+    color: cornflowerblue;
+    font-size: 1.3rem;
+    font-family: "Oswald", sans-serif;
+    font-weight: 600;
+    margin-bottom: 5px !important;
 }
 
 p.card-text:nth-child(7){
@@ -1046,6 +1069,15 @@ div.card-body > p > i{
     margin-bottom: 30px;
 }
 
+#cards-container-meli {
+    min-height: 100vh;
+    background-color: white; /* Fondo negro */
+    padding: 20px; /* Espacio interno */
+    border-radius: 0 0 8px 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra */
+    margin-bottom: 30px;
+}
+
 /* Estilo de las tarjetas */
 #envios-cards .card {
     background-color: #f5f5f7; /* Fondo de la tarjeta */
@@ -1063,6 +1095,51 @@ div.card-body > p > i{
     border: dashed 2px orange;
 }
 
+#meli-cards .card {
+    border: none;
+    border-radius: 20px;
+    position: relative; /* Asegura que el pseudo-elemento se posicione correctamente */
+    overflow: hidden; /* Oculta cualquier desbordamiento */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición suave para el tamaño y sombra */
+    margin-bottom: 20px;
+    box-shadow: 0 0px 10px #00000067; 
+}
+
+#meli-cards .card:hover {
+    background-color: #ffe9ea;
+    transform: scale(1.05); /* Aumenta el tamaño al pasar el ratón */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); /* Sombra más intensa al pasar el ratón */
+    animation: breathing 1.5s infinite; /* Animación de respiración solo al hacer hover */
+}
+
+#meli-cards .card::before {
+    content: ''; 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    border-radius: 20px; /* Mantiene el radio del borde */
+    border: 2px dashed cornflowerblue; /* Borde inicial */
+    transition: all 0.3s ease; /* Transición suave */
+    pointer-events: none; /* Hace que el pseudo-elemento no interfiera con el mouse */
+}
+
+@keyframes breathing {
+    0%, 100% {
+        box-shadow: 0 0 15px rgba(8, 148, 255, 0.1), /* Sombra inicial más clara */
+                    0 0 30px rgba(201, 89, 221, 0.1),
+                    0 0 45px rgba(255, 46, 84, 0.1),
+                    0 0 60px rgba(255, 144, 4, 0.1);
+    }
+    50% {
+        box-shadow: 0 0 25px rgba(8, 148, 255, 0.3), /* Sombra de respiración más intensa */
+                    0 0 50px rgba(201, 89, 221, 0.3),
+                    0 0 75px rgba(255, 46, 84, 0.3),
+                    0 0 100px rgba(255, 144, 4, 0.3);
+    }
+}
+
 .mt-5{
     margin-top: 0 !important;
 }
@@ -1073,11 +1150,21 @@ div.card-body > p > i{
         flex: 0 0 50%; /* 2 tarjetas por fila */
         max-width: 50%; /* 2 tarjetas por fila */
     }
+
+    #meli-cards .col-md-4 {
+        flex: 0 0 50%; /* 2 tarjetas por fila */
+        max-width: 50%; /* 2 tarjetas por fila */
+    }
 }
 
 /* Media query para pantallas pequeñas (móviles) */
 @media (max-width: 767px) {
     #envios-cards .col-md-4 {
+        flex: 0 0 100%; /* 1 tarjeta por fila */
+        max-width: 100%; /* 1 tarjeta por fila */
+    }
+
+    #meli-cards .col-md-4 {
         flex: 0 0 100%; /* 1 tarjeta por fila */
         max-width: 100%; /* 1 tarjeta por fila */
     }
@@ -1169,4 +1256,12 @@ div.card-body > p > i{
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+.mercado-btn{
+    width: max-content;
+    margin-right: 10px;
+    background: cornflowerblue;
+    border: #0065C3;
+}
+
 /* FIN ORDENAR MAS ANTIGUO Y NUEVO */
+      
