--- a/styles.css
+++ b/styles.css
@@ -1032,6 +1032,7 @@ p.card-text:nth-child(7){
     color: green;
     font-family: "Oswald", sans-serif;
     font-weight: 400;
+    margin-bottom: 0;
 }
 
 .btn-warning{
@@ -1114,6 +1115,22 @@ div.card-body > p > i{
 
 .mt-5{
     margin-top: 0 !important;
+}
+
+.mt-2{
+    margin-top: 5px !important;
+}
+
+.form-control-obs{
+    margin-bottom: 5px !important;
+}
+
+.divObs{
+    margin-bottom: 5px !important;
+}
+
+.form-label{
+    margin-bottom: 5px !important;
 }
 
 /* Media query para pantallas medianas (tablets) */
