--- a/styles.css
+++ b/styles.css
@@ -976,6 +976,8 @@ span > img {
 .card {
     transition: transform 0.2s;
     cursor: pointer;
+    margin-bottom: 25px !important;
+    border-radius: 5% !important;
 }
 
 .card:hover {
@@ -983,10 +985,12 @@ span > img {
 }
 
 .card-title {
-    font-family: "Oswald", sans-serif;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    text-transform: capitalize;
     color: rgb(55, 119, 238);
-    font-weight: 400;
+    font-weight: 300 !important;
     font-size: 1.3rem;
+    margin-bottom: 5px;
 }
 
 .card-title-meli {
@@ -1002,12 +1006,14 @@ p.card-text{
 }
 
 .cpLocalidad{
-    font-family: "Oswald", sans-serif;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    text-transform: capitalize;
+    font-size: .8rem;
     font-weight: 300;
     width: fit-content;
-    background-color: gray;
+    background-color: coral;
     color: white;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 5px;
 }
 
@@ -1038,26 +1044,40 @@ p.card-text{
 }
 
 p.card-text:nth-child(3){
-    font-family: "Oswald", sans-serif;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    text-transform: capitalize;
     font-weight: 300;
+    margin-bottom: 5px;
 }
 
 p.card-text:nth-child(4){
-    font-family: "Oswald", sans-serif;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    text-transform: capitalize;
     font-weight: 300;
+    margin-bottom: 5px;
 }
 
 p.card-text:nth-child(5){
-    font-family: "Oswald", sans-serif;
+    font-family: "Reddit Sans Condensed", sans-serif;
     font-weight: 300;
+    margin-bottom: 5px;
 }
 
 p.card-text:nth-child(6){
-    font-family: "Oswald", sans-serif;
+    font-family: "Reddit Sans Condensed", sans-serif;
     font-weight: 300;
+    margin-bottom: 5px;
+}
+
+p.card-text:nth-child(7){
+    color: green;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-weight: 400;
+    margin-bottom: 0;
 }
 
 .remitoCard{
+    margin-bottom: 5px !important;
     text-align: center;
     padding: .2rem;
     width: fit-content;
@@ -1065,8 +1085,8 @@ p.card-text:nth-child(6){
     border: dashed #ffc107 2px;
     color: cornflowerblue;
     font-size: 1.3rem;
-    font-family: "Oswald", sans-serif;
-    font-weight: 600;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-weight: 800 !important;
 }
 
 .remitoCardMeli{
@@ -1080,13 +1100,6 @@ p.card-text:nth-child(6){
     font-family: "Reddit Sans Condensed", sans-serif;
     font-weight: 700;
     margin-bottom: 5px !important;
-}
-
-p.card-text:nth-child(7){
-    color: green;
-    font-family: "Oswald", sans-serif;
-    font-weight: 400;
-    margin-bottom: 0;
 }
 
 .little-card-meli > p{
@@ -1299,8 +1312,8 @@ div.card-body > p > i{
 
 .apiSeguimiento p {
     font-size: 1rem;
-    font-family: "Oswald", sans-serif;
-    font-weight: 400;
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-weight: 400 !important;
 }
 
 .apiSeguimiento p:nth-child(3) {
@@ -1318,6 +1331,11 @@ div.card-body > p > i{
 
 #simbel{
     width: 70px;
+}
+
+#simbel2{
+    width: 70px;
+    padding-left: 5px;
 }
 
 .simbel{
@@ -1418,6 +1436,40 @@ div.card-body > p > i{
     font-weight: bold; 
 }
 
+.em-state-andesmar{
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-size: 1rem;
+    padding-inline: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    position: absolute;
+    top: -18px; 
+    right: 10px;
+    background-color: cornflowerblue; 
+    color: white;
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    font-weight: bold; 
+}
+
+.em-state-simbel{
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-size: 1rem;
+    padding-inline: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    position: absolute;
+    top: -18px; 
+    right: 10px;
+    background-color:#ec0043; 
+    color: white;
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    font-weight: bold; 
+}
+
 .dimensions-info {
     background-color: #ffffff;
     border-radius: 10px;
@@ -1442,4 +1494,9 @@ div.card-body > p > i{
     right: 20px; 
     bottom: 20px; 
     z-index: 1000; 
+}
+
+.siri{
+    width: 220px;
+    overflow: hidden;
 }
